styles/Main.module.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;700;900&display=swap");

.maincontainer {
  min-height: calc(100vh - 100px);
}

.togglecontainer {
  width: 77%;
  margin: 0 auto;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.content {
  min-height: calc(100vh - 173px);
  position: relative;
  z-index: 3;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-bottom: 75px;
}

.intro {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.hello {
  font-weight: 500;
  font-size: 1.2em;
  margin-bottom: 0.6rem;
}

.name {
  font-weight: 900;
  font-size: 2.2em;
  margin-bottom: 0.6rem;
}

.titlescontainer {
  text-align: center;
  margin-bottom: 0.6rem;
}

.titles {
  font-size: 1.3em;
}

.bio {
  width: 80%;
  text-align: center;
  font-weight: 300;
  font-size: 0.8em;
  margin-bottom: 1.3rem;
}

.buttons {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.hirebtnlight,
.resumebtnlight {
  text-decoration: none;
  color: white;
}

.hirebtnlight {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.45);
  padding: 1em 1.5em;
  border-radius: 13px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  margin-bottom: 1.2em;
}

.hirebtndark {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.76);
  padding: 1em 1.5em;
  border-radius: 13px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  margin-bottom: 1.2em;
  text-decoration: none;
  color: black;
}

.hire,
.resume {
  margin-right: 0.5em;
  font-weight: 700;
}

.resumebtnlight {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #fc81e1;
  padding: 1em 1.5em;
  border-radius: 13px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  margin-bottom: 1.2em;
}

.resumebtndark {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #fc81e1;
  padding: 1em 1.5em;
  border-radius: 13px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  margin-bottom: 1.2em;
  text-decoration: none;
  color: black;
}

.rectangle,
.circle,
.diamond {
  display: none;
}

.animationlight {
  display: flex;
  margin: 0 auto;
  justify-content: center;
  width: 30px;
  height: 65px;
  border: 4px solid black;
  border-radius: 1em;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
}

.animationdark {
  display: flex;
  margin: 0 auto;
  justify-content: center;
  width: 30px;
  height: 65px;
  border: 4px solid white;
  border-radius: 1em;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
}

.circlelight {
  position: relative;
  top: 3px;
  background-color: black;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  animation: up-and-down 1.5s ease-in-out infinite alternate;
}

.circledark {
  position: relative;
  top: 3px;
  background-color: white;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  animation: up-and-down 1.5s ease-in-out infinite alternate;
}

@keyframes up-and-down {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(33px);
  }
}

@media (min-width: 800px) {
  .content {
    margin: 0 auto 0 auto;
    width: 77%;
    align-items: flex-start;
    padding-left: 100px;
  }

  .rectangle {
    display: inline;
    width: 350px;
    height: 330px;
    background-color: #24ff7c;
    border-radius: 81px;
    position: absolute;
    top: 30%;
    right: 25%;
    z-index: 0;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  }

  .circle {
    display: inline;
    width: 285px;
    height: 285px;
    background-color: #0d1a3d;
    border-radius: 50%;
    position: absolute;
    top: 25%;
    right: 12%;
    z-index: 1;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  }

  .diamond {
    display: inline;
    width: 200px;
    height: 200px;
    background-color: #fc81e1;
    border-radius: 50px;
    position: absolute;
    top: 50%;
    right: 18%;
    z-index: 2;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    transform: rotate(45deg);
  }

  .intro {
    align-items: flex-start;
  }

  .titlescontainer,
  .bio {
    text-align: left;
  }

  .bio {
    width: 100%;
  }

  .buttons {
    flex-direction: row;
  }

  .hirebtndark,
  .hirebtnlight,
  .resumebtndark,
  .resumebtnlight {
    margin-right: 1.25em;
    margin-bottom: 1.5em;
  }

  .animationdark,
  .animationlight {
    margin: 0;
  }

  .hello {
    font-size: 1.5em;
  }

  .name {
    font-size: 3em;
  }

  .titles {
    font-size: 1.5em;
    line-height: 30px;
  }

  .bio {
    font-size: 1em;
  }
}

